# gotify-notifier

./: .gitignore  GITHUB_ACTIONS_GUIDE.md  QUICK_START.txt  README.md  build.sh  deploy.sh  install.sh
gotify-backup/: BACKUP_INFO.txt  Cargo.toml  README.md  build_and_test.sh  tauri.conf.json  verify_backup.sh  恢复指南.md
gotify-backup/.github/workflows/: build.yml
gotify-backup/src/: lib.rs
gotify-backup/src-tauri-src/: lib.rs
gotify-backup/ui/: app.js  index.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  index.html.backup  notifications.html  settings.html  styles.css  tauri-api.js
